Creo el notebook explicando el punto 10'

--- a/notebooks/punto10.ipynb
+++ b/notebooks/punto10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,48 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ranking de ronda numero 1 :\n",
-      "Shadow: 6 puntos\n",
-      "Viper: 4 puntos\n",
-      "Reaper: 4 puntos\n",
-      "Blaze: 3 puntos\n",
-      "Frost: 1 puntos\n",
-      "-----------------------------------\n",
-      "Ranking de ronda numero 2 :\n",
-      "Shadow: 8 puntos\n",
-      "Blaze: 8 puntos\n",
-      "Viper: 8 puntos\n",
-      "Frost: 7 puntos\n",
-      "Reaper: 5 puntos\n",
-      "-----------------------------------\n",
-      "Ranking de ronda numero 3 :\n",
-      "Blaze: 15 puntos\n",
-      "Shadow: 11 puntos\n",
-      "Viper: 11 puntos\n",
-      "Reaper: 9 puntos\n",
-      "Frost: 8 puntos\n",
-      "-----------------------------------\n",
-      "Ranking de ronda numero 4 :\n",
-      "Shadow: 18 puntos\n",
-      "Blaze: 17 puntos\n",
-      "Viper: 13 puntos\n",
-      "Reaper: 13 puntos\n",
-      "Frost: 11 puntos\n",
-      "-----------------------------------\n",
-      "Ranking de ronda numero 5 :\n",
-      "Shadow: 22 puntos\n",
-      "Blaze: 18 puntos\n",
-      "Viper: 18 puntos\n",
-      "Reaper: 16 puntos\n",
-      "Frost: 15 puntos\n",
-      "-----------------------------------\n"
+     "ename": "NameError",
+     "evalue": "name 'procesar_rondas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m total = \u001b[43mprocesar_rondas\u001b[49m(stats, rounds)\n",
+      "\u001b[31mNameError\u001b[39m: name 'procesar_rondas' is not defined"
      ]
     }
    ],
@@ -337,7 +307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
